fix layout on firefox

--- a/styles/kalahboard.css
+++ b/styles/kalahboard.css
@@ -1,5 +1,5 @@
 .board {
-    height: 25em;
+    height: 400px;
 
     display: grid;
     gap: 20px;
